UI change and functionality added

--- a/app/src/main/res/layout/profile_list_fragment.xml
+++ b/app/src/main/res/layout/profile_list_fragment.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/oval"
         android:elevation="@dimen/elevation_low"
         android:src="@android:drawable/ic_input_add"
+        android:layout_marginRight="10dip"
         android:stateListAnimator="@animator/button_elevation" />
 
 </FrameLayout>
