--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -17,6 +17,7 @@
 			android:orientation="vertical"
 			android:background="@color/background_extra_light_gray"
             android:padding="0dp">
+
             <!-- Personalized message bar -->
             <LinearLayout
                 android:id="@+id/message_layout"
@@ -24,6 +25,7 @@
                 android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:background="@color/background_extra_light_gray">
+
                 <LinearLayout
                     android:id="@+id/login_layout"
                     android:layout_width="wrap_content"
@@ -49,6 +51,7 @@
                         android:textSize="14sp"
                         android:visibility="gone"
                         android:textColor="@android:color/black"/>
+
                     <LinearLayout
                         android:id="@+id/login_info_layout"
                         android:layout_width="wrap_content"
@@ -89,13 +92,57 @@
                             android:text="@string/question_mark"/>
                     </LinearLayout>
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/reward_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:orientation="horizontal"
+                    android:padding="5dp"
+                    android:gravity="center"
+                    android:visibility="gone">
+                    <TextView
+                        android:id="@+id/reward"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:lines="1"
+                        android:maxEms="4"
+                        android:ellipsize="end"
+                        android:textColor="@android:color/black"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center"
+                        android:paddingLeft="5dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textSize="13sp"
+                            android:textColor="@android:color/black"
+                            android:text="@string/redeem"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textSize="13sp"
+                            android:textColor="@android:color/black"
+                            android:text="@string/reward"/>
+                    </LinearLayout>
+                </LinearLayout>
+
                 <View
                     android:layout_width="1dp"
                     android:layout_height="40dp"
                     android:background="@color/background_light_gray"
-                    android:layout_gravity="top"
+                    android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"/>
+
                 <LinearLayout
                     android:id="@+id/store_layout"
                     android:layout_width="wrap_content"
@@ -123,16 +170,17 @@
                             android:textColor="@android:color/black"
                             android:text="Open"/>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:paddingLeft="10dp">
+                        android:paddingLeft="5dp">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="14sp"
+                            android:textSize="13sp"
                             android:textColor="@android:color/black"
                             android:text="Store nearby you"/>
                         <TextView
@@ -142,6 +190,7 @@
                             android:gravity="center"
                             android:lines="1"
                             android:ellipsize="end"
+                            android:maxEms="4"
                             android:textSize="14sp"
                             android:textColor="@android:color/black"
                             android:textStyle="bold"
