--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,20 +19,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="invisible">
-        <!-- ActionBar, these must be kept in priority order -->
         <com.staples.mobile.cfa.widget.ActionBar
             android:id="@+id/action_bar"
             android:layout_width="match_parent"
             android:layout_height="56dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:animateLayoutChanges="true"
             android:background="@color/staples_light">
+            <!-- ActionBar, these must be kept in priority order -->
             <ImageView
                 android:id="@+id/close_button"
                 style="@style/ActionBarIconStyle"
                 android:layout_gravity="center_vertical|left"
                 android:src="@drawable/ic_close_white"/>
+            <ImageView
+                android:id="@+id/back_button"
+                style="@style/ActionBarIconStyle"
+                android:layout_gravity="center_vertical|left"
+                android:src="@drawable/ic_arrow_back_white"/>
             <ImageView
                 android:id="@+id/action_left_drawer"
                 style="@style/ActionBarIconStyle"
@@ -56,7 +61,7 @@
                 style="@style/ActionBarIconStyle"
                 android:layout_gravity="center_vertical|right"
                 android:src="@drawable/ic_search_white"/>
-            <SearchView
+            <com.staples.mobile.cfa.search.SearchBarView
                 android:id="@+id/search_view"
                 style="@style/ActionBarSearchStyle"
                 android:layout_gravity="center_vertical|right"
