--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,5 +2,6 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:colorPrimaryDark">@color/staples_dark</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
