--- a/app/src/main/res/layout/add_address_fragment.xml
+++ b/app/src/main/res/layout/add_address_fragment.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/firstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="First Name"
         android:ems="10"
+        android:id="@+id/firstName"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -18,22 +18,22 @@
         android:nextFocusDown="@+id/lastName"/>
 
     <EditText
-        android:id="@+id/lastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Last Name"
         android:ems="10"
+        android:id="@+id/lastName"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <EditText
-        android:id="@+id/phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="phone"
         android:ems="10"
+        android:id="@+id/phoneNumber"
         android:hint="Phone"
         android:layout_below="@+id/firstName"
         android:layout_alignRight="@+id/lastName"
@@ -41,13 +41,13 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-	<AutoCompleteTextView
-        android:id="@+id/address"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPostalAddress"
-		android:hint="Ship-to Address"
+        android:hint="Address"
         android:ems="10"
+        android:id="@+id/address"
         android:layout_below="@+id/phoneNumber"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -55,52 +55,46 @@
         android:layout_alignEnd="@+id/lastName" />
 
     <EditText
-        android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPostalAddress"
         android:ems="10"
         android:hint="City"
+        android:id="@+id/city"
         android:layout_below="@+id/address"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/lastName"
-		android:layout_alignEnd="@+id/lastName"
-		android:visibility="gone"
-		/>
+        android:layout_alignEnd="@+id/lastName" />
 
     <EditText
-        android:id="@+id/state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPostalAddress"
         android:hint="State"
+        android:id="@+id/state"
         android:layout_below="@+id/city"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/lastName"
         android:layout_toLeftOf="@+id/lastName"
-		android:nextFocusDown="@+id/zipCode"
-		android:visibility="gone"
-		/>
+        android:nextFocusDown="@+id/zipCode"/>
 
     <EditText
-        android:id="@+id/zipCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Zip Code"
         android:ems="10"
+        android:id="@+id/zipCode"
         android:layout_below="@+id/city"
-		android:layout_toRightOf="@+id/state"
-		android:visibility="gone"
-		/>
+        android:layout_toRightOf="@+id/state"  />
 
     <Button
-        android:id="@+id/addressSaveBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:id="@+id/addressSaveBtn"
         android:layout_below="@+id/state"
         android:layout_centerHorizontal="true" />
 
