--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -118,21 +118,10 @@
             style="@style/GraySubheading"
             android:paddingLeft="6dp"
             android:text="@string/store_hours"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/store_days"
-                android:layout_alignParentLeft="true"
-                style="@style/StoreItem"
-                android:paddingLeft="6dp"
-                android:layout_marginRight="16dp"/>
-            <TextView
-                android:id="@+id/store_hours"
-                android:layout_alignParentLeft="true"
-                style="@style/StoreItem"/>
-        </LinearLayout>
+        <TextView
+            android:id="@+id/store_schedule"
+            android:paddingLeft="6dp"
+            style="@style/StoreItem"/>
 
         <!--horizontal rule 3-->
         <View
