Layout of store schedule and new map and more icons

--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -48,6 +48,6 @@
         android:layout_centerVertical="true"
         android:adjustViewBounds="true"
         android:paddingRight="5dp"
-        android:src="@drawable/more_arrow"/>
+        android:src="@drawable/ic_chevron_right_black"/>
 </RelativeLayout>
 
