--- a/app/src/main/res/layout/checkout_registered_entry.xml
+++ b/app/src/main/res/layout/checkout_registered_entry.xml
@@ -47,7 +47,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/more_arrow"/>
+            android:src="@drawable/ic_chevron_right_black"/>
     </RelativeLayout>
 
     <!--horizontal rule-->
@@ -95,7 +95,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/more_arrow"/>
+            android:src="@drawable/ic_chevron_right_black"/>
     </RelativeLayout>
 
     <!--horizontal rule-->
@@ -141,7 +141,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/more_arrow"/>
+            android:src="@drawable/ic_chevron_right_black"/>
     </RelativeLayout>
 
 </LinearLayout>
