--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -96,7 +96,7 @@
                 <LinearLayout
                     android:id="@+id/reward_layout"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:orientation="horizontal"
                     android:padding="5dp"
@@ -146,7 +146,7 @@
                 <com.staples.mobile.cfa.widget.DataWrapper
                     android:id="@+id/store_wrapper"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:padding="5dp"
                     android:gravity="center"
@@ -220,12 +220,12 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/error_info"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
+                        android:layout_height="match_parent"
                         android:gravity="center"
-                        android:textSize="20sp"
-                        android:text="@string/empty"
+                        android:textSize="16sp"
+                        android:text="@string/no_store"
                         android:padding="5dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
 
