Using channel api to get correct nearby store location and office hour

--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -172,8 +172,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:textSize="12sp"
-                                android:textColor="@android:color/black"
-                                android:text="Open"/>
+                                android:textColor="@android:color/black"/>
                         </LinearLayout>
 
                         <LinearLayout
@@ -187,7 +186,7 @@
                                 android:gravity="center"
                                 android:textSize="13sp"
                                 android:textColor="@android:color/black"
-                                android:text="Store nearby you"/>
+                                android:text="@string/store_nearby"/>
                             <TextView
                                 android:id="@+id/store_name"
                                 android:layout_width="match_parent"
@@ -198,8 +197,7 @@
                                 android:maxEms="4"
                                 android:textSize="14sp"
                                 android:textColor="@android:color/black"
-                                android:textStyle="bold"
-                                android:text="Cambridge, MA"/>
+                                android:textStyle="bold"/>
                         </LinearLayout>
                     </LinearLayout>
 
