--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,6 +7,7 @@
     <color name="background_off_white">#f5f5f5</color>
     <color name="background_light_gray">#c6c6c6</color>
     <color name="background_extra_light_gray">#eeeeee</color>
+    <color name="background_dark_gray">#333333</color>
     <color name="background_green">#3fc63f</color>
     <color name="background_blue">#3f6fff</color>
     <color name="hr_extra_light_gray">#f5f5f5</color>
