--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -3,29 +3,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 	android:orientation="vertical">
-	<ScrollView
-		android:id="@+id/configScrollView"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-        android:layout_margin="0dp"
-        android:padding="0dp">
-		<LinearLayout
-			android:id="@+id/configScrollLayout"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-            android:layout_margin="0dp"
-			android:orientation="vertical"
-			android:background="@color/background_extra_light_gray"
-            android:padding="0dp">
 
-            <!-- Personalized message bar -->
+    <!-- Personalized message bar -->
+    <FrameLayout
+        android:id="@+id/message_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <FrameLayout
+            android:id="@+id/message_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background_extra_light_gray">
             <LinearLayout
-                android:id="@+id/message_layout"
+                android:id="@+id/message_contain_layout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:orientation="horizontal"
-                android:background="@color/background_extra_light_gray">
-
+                android:orientation="horizontal">
                 <LinearLayout
                     android:id="@+id/login_layout"
                     android:layout_width="wrap_content"
@@ -135,14 +128,6 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="40dp"
-                    android:background="@color/background_light_gray"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"/>
-
                 <com.staples.mobile.cfa.widget.DataWrapper
                     android:id="@+id/store_wrapper"
                     android:layout_width="wrap_content"
@@ -226,8 +211,51 @@
                         android:text="@string/no_store"
                         android:padding="5dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
-
             </LinearLayout>
+            <View
+                android:id="@+id/vertical_line"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:background="@color/background_light_gray"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/ic_arrow_up"/>
+        </FrameLayout>
+
+        <View
+            android:id="@+id/hide_banner"
+            android:layout_width="40dp"
+            android:layout_height="5dp"
+            android:background="@color/text_gray"
+            android:layout_gravity="bottom|center"/>
+
+        <ImageView
+            android:id="@+id/show_arrow"
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_arrow_down"
+            android:visibility="gone"/>
+    </FrameLayout>
+
+	<ScrollView
+		android:id="@+id/configScrollView"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        android:padding="0dp">
+		<LinearLayout
+			android:id="@+id/configScrollLayout"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+            android:layout_margin="0dp"
+			android:orientation="vertical"
+			android:background="@color/background_extra_light_gray"
+            android:padding="0dp">
 		</LinearLayout>
 	</ScrollView>
+
+
 </com.staples.mobile.cfa.widget.AnimatorLayout>
