--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -21,7 +21,7 @@
                 android:orientation="horizontal">
                 <LinearLayout
                     android:id="@+id/login_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
                     android:orientation="vertical"
@@ -88,7 +88,7 @@
 
                 <LinearLayout
                     android:id="@+id/reward_layout"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:orientation="horizontal"
@@ -110,7 +110,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:gravity="center"
-                        android:paddingLeft="5dp">
+                        android:paddingLeft="10dp">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -130,7 +130,7 @@
 
                 <com.staples.mobile.cfa.widget.DataWrapper
                     android:id="@+id/store_wrapper"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
                     android:padding="5dp"
