--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -235,7 +235,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_arrow_down"
+            android:src="@drawable/ic_expand_more_black"
             android:visibility="gone"/>
     </FrameLayout>
 
