sky set changes as discussed with kavitha

--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="#ffffff">
+        android:background="#ffffff"
+        android:fillViewport="false">
         <!--dynamically add content here-->
     </ScrollView>
 
