--- a/app/src/main/res/layout/browse_active.xml
+++ b/app/src/main/res/layout/browse_active.xml
@@ -2,5 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:id="@+id/title"
           style="@style/BrowseStyle"
-          android:background="#ff666666"
+          android:background="@color/staples_dark"
           android:textColor="#ffffffff"/>
