--- a/app/src/main/res/layout/browse_frame.xml
+++ b/app/src/main/res/layout/browse_frame.xml
@@ -8,7 +8,7 @@
         android:id="@+id/products"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:horizontalSpacing="3dp"
+        android:padding="6dp"
         android:verticalSpacing="3dp"
         android:choiceMode="singleChoice"
         android:background="#ffffffff"/>
