--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -3,17 +3,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <EditText
-        android:id="@+id/store_search"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:inputType="textPostalAddress"
-        android:imeOptions="actionSearch"
-        android:singleLine="true"/>
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="8dp"
+        android:background="@color/staples_light">
+        <EditText
+            android:id="@+id/store_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="6dp"
+            android:background="#ffffff"
+            android:inputType="textPostalAddress"
+            android:imeOptions="actionSearch"
+            android:singleLine="true"/>
+        <ImageView
+            android:id="@+id/store_here"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingRight="6dp"
+            android:background="#ffffff"
+            android:src="@drawable/ic_my_location_black"/>
+    </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="0dp"/>
+        android:layout_weight="1"
 </com.staples.mobile.cfa.widget.AnimatorLayout>
